sumo/tests/traci/VariableSubscription/errors/ArrivedVehicle/testclient.prog
simstep2 500
subscribevariable 212 0 0 1000 1 64
simstep2 0

